# docs/swagger.json
@@ -1097,10 +1097,10 @@
                     "type": "integer"
                 },
                 "table": {
-                    "type": "integer"
+                    "$ref": "#/definitions/models.SwagTable"
                 },
                 "user": {
-                    "type": "integer"
+                    "$ref": "#/definitions/models.SwagUser"
                 }
             }
         },
